--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,7 @@
 
 <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { multipart: true }) do |f| %>
 <%= devise_error_messages! %>
 
   <div class="form-group">
@@ -24,6 +24,7 @@
   <div class="form-group">
     <%= f.password_field :password_confirmation, autocomplete: "off", class:'form-control', placeholder:"Confirm Password" %>
   </div>
+  <%= f.file_field :avatar %>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
