--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3 text-center">
+    <%= link_to "Signup With Facebook", user_facebook_omniauth_authorize_path, class:"btn btn-primary"%>
 
 <h2>Sign up</h2>
 
@@ -27,7 +28,7 @@
   <%= f.file_field :avatar %>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class:"btn btn-primary"%>
   </div>
 <% end %>
 </div>
