--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,12 @@
             <% else %>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <% if current_user.image? %>
+                  <%= image_tag current_user.image, class: "img-circle avatar-small" %>
+                  <% else %>
                   <%= image_tag current_user.avatar.url, class: "img-circle avatar-small" %>
+                  <% end %>
+
                 <%= current_user.fullname %> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
                   <li><a href="#">Your Rentals</a></li>
