--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3 text-center">
-    <%= link_to "Signup With Facebook", user_facebook_omniauth_authorize_path, class:"btn btn-primary"%>
+    <%= link_to "Sign In With Facebook", user_facebook_omniauth_authorize_path, class:"btn btn-primary"%></br>
+    <%= link_to "Sign In with Google", user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary" %>
 
 <h2>Sign up</h2>
 
