--- a/app/views/spaces/_form.html.erb
+++ b/app/views/spaces/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-4 col-md-offset-3 text-center">
     <h1>Create a new space</h1>
-    <%= form_for @space do |f| %>
+    <%= form_for @space, html: { multipart: true } do |f| %>
     <label>Types</label>
     <%= f.select :space_type, [["Shed","Shed"],["Garage","Garage"],["Driveway","Driveway"],["Other","Other"]], prompt: "Select", class: "form-control" %>
       <%= f.text_field :title, placeholder: "Title" %>
@@ -9,6 +9,8 @@
       <%= f.text_field :size, placeholder: "Size" %>
       <%= f.text_field :location, placeholder: "Location" %>
       <%= f.number_field :price, placeholder: "Price" %>
+      <%= file_field_tag "images[]", type: :file, multipart: true%>
+      <%= render "photos/list" %>
       <%= f.submit "Save", class: "btn btn-primary"%>
     <% end %>
   </div>
