created profile page, need to create link_to

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,7 +5,21 @@
   width: 28px;
 }
 
-.spaces-photo{
+.spaces-photo {
   height: 380px;
   width: 400px;
+}
+
+.user-profile{
+  width: 200px;
+  height: 200px;
+}
+
+.container {
+  width: 80%;
+}
+
+.user-info {
+  text-align: center;
+  border: 1px solid grey;
 }
