--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,10 +24,8 @@
   <div class="form-group">
     <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", placeholder:"Confirm New Password" %>
   </div>
-  <% if @minimum_password_length %>
-  <br />
-  <em><%= @minimum_password_length %> characters minimum</em>
-  <% end %>
+
+  <%= f.file_field :avatar %><br>
 
   <div class="form-group">
     <%= f.password_field :current_password, autocomplete: "off", class:"form-control", placeholder:"Current Password" %>
@@ -36,11 +34,9 @@
   <div class="actions">
     <%= f.submit "Update Info", class:"btn btn-info" %>
   </div>
-<% end %>
+<% end %><br>
 
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger"%></p>
+<%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"btn btn-danger"%></p>
 
 </div>
 </div>
