--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,11 @@
   height: 380px;
   width: 400px;
 }
+
+.panel-heading.preview {
+  padding: 0;
+}
+
+.panel-heading.preview img{
+  width: 100%;
+}
