--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,2 +1,31 @@
-<h1>Spaces#index</h1>
-<p>Find me in app/views/spaces/index.html.erb</p>
+<div class="row">
+    <div class="col-md-3">
+        <ul class="sidebar-list">
+            <li><% link_to "Your rentable space", spaces_path, class: "sidebar-link active" %></li>
+            <li><% link_to "Your reservations", spaces_path, class: "sidebar-link" %></li>
+        </ul>
+    </div>
+    <div class="col-md-9">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                Listings
+            </div>
+            <div class="panel-body">
+
+                <% @spaces.each do |space| %>
+                <div class="row">
+                    <div class="col-md-2">
+                        <%= image_tag space.photos[0].image.url(:thumb) if space.photos.length > 0 %>
+                      </div>
+                    <div class="col-md-7">
+                        <h4><%= space.space_type %></h4>
+                    </div>
+                    <div class="col-md-3 right">
+                        <%= link_to "edit", edit_space_path(space), class: "btn btn-primary" %>
+                    </div>
+                </div>
+                <% end %>
+            </div>
+        </div>
+    </div>
+</div>
