--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Muststache</a>
+          <a class="navbar-brand" href="/">Muststache</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -27,7 +27,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Your Rentals</a></li>
                   <li><a href="#">Wish Lists</a></li>
-                  <li><%= link_to "View Profile", edit_user_registration_path %></li> <!-- needs to be user_path -->
+                  <li><%= link_to "View Profile", "/" %></li>
                   <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
                   <li role="separator" class="divider"></li>
                   <li><a href="#">Account Setting</a></li>
