added messaging between users

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
         <div class="row">
           <div class="col-md-6 col-md-offset-1 text-center">
 
+            <%= link_to "Mailbox", conversations_path, class: "item" %>
 
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
