--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,6 +15,7 @@
               <li><%= link_to "Log In", new_user_session_path %></li>
               <li><%= link_to "Sign Up", new_user_registration_path %></li>
             <% else %>
+            <li> <%= link_to "Messages", conversations_path, class: "item" %></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <% if current_user.image? %>
@@ -34,6 +35,8 @@
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
                 </ul>
               </li>
+
+
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
