--- a/app/views/spaces/_form.html.erb
+++ b/app/views/spaces/_form.html.erb
@@ -4,16 +4,15 @@
     <%= form_for @space, html: { multipart: true } do |f| %>
     <label>Types</label>
     <%= f.select :space_type, [["Shed","Shed"],["Garage","Garage"],["Driveway","Driveway"],["Other","Other"]], prompt: "Select", class: "form-control" %>
-      <%= f.text_field :title, placeholder: "Title" %>
-      <%= f.text_field :description, placeholder: "Description" %>
-      <%= f.text_field :size, placeholder: "Size" %>
-      <%= f.text_field :location, placeholder: "Location" %>
-      <%= f.number_field :price, placeholder: "Price" %>
-      <%= file_field_tag "images[]", type: :file, multipart: true%>
+      <%= f.text_field :title, placeholder: "Title", class: "form-control" %><br>
+      <%= f.text_field :description, placeholder: "Description", class: "form-control" %><br>
+      <%= f.text_field :size, placeholder: "Size", class: "form-control" %><br>
+      <%= f.text_field :location, placeholder: "Location", class: "form-control" %><br>
+      <%= f.number_field :price, placeholder: "Price", class: "form-control" %><br>
+      <%= file_field_tag "images[]", type: :file, multipart: true%><br>
 
-      <div id="photos"> 
-        <%= render "photos/list" %>
-      </div>
+      <%= render "photos/list" %>
+
       <%= f.submit "Save", class: "btn btn-primary"%>
     <% end %>
   </div>
