--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -12,6 +12,7 @@
 						<h4>Type: <%= @space.space_type %></h4>
 						<h4>Description: <%= @space.description %></h4>
 						<h4>Location: <%= @space.location %></h4>
+						<h3>Price per day: <%= @space.price%></h3>
 					</div>
 				</div>
 
