--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,16 @@
   width: 216px;
 }
 
+.reservation-table td {
+  width: 100%;
+  border: 1px solid #dce0e0;
+  padding:10px;
+}
+
+.wide {
+  width: 100%;
+}
+
 #map {
  height: 400px;
  width: 100%;
