--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,10 +1,7 @@
 	<div class="panel">
 		<div class="panel-body">
-			<% if current_user.image? %>
-			<%= image_tag current_user.image, class: "img-circle avatar-small" %>
-			<% else %>
-			<%= image_tag current_user.avatar, class: "img-circle avatar-small" %>
-			<% end %>
+			<%= image_tag message.user.avatar, class: "img-circle avatar-small" %>
+
 			<strong><%= message.user.fullname %></strong>
 
 			<span class="pull-right"><%= message.message_time %></span>
