--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,10 @@
 <div class="row">
-  <div class="col-md-3 col-md-offset-1">
-   <% if current_user.image? %>
-     <%= image_tag current_user.image, class: "user-profile" %>
-   <% else %>
-     <%= image_tag current_user.avatar, class: "user-profile"%>
-   <% end %>
-   <div class="user-info">
-     <%= @user.email %>
-   </div>
-  </div>
-<h2><%= @user.fullname %></h2>
-
-
-
+    <div class="col-md-3 col-md-offset-1">
+        <%= image_tag @user.avatar, class: "user-profile" %>
+        <div class="user-info">
+            <%= @user.email %>
+        </div>
+    </div>
+    <h2><%= @user.fullname %></h2>
 
 </div>
