--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,24 +1,34 @@
 <div class="row">
-    <div class="col-md-9">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                Listings
-            </div>
-            <div class="panel-body">
-                <% @spaces.each do |space| %>
-                <div class="row">
-                    <div class="col-md-2">
-                        <%= image_tag space.photos[0].image.url(:thumb) if space.photos.length > 0 %>
-                      </div>
-                    <div class="col-md-7">
-                      <h3><%= link_to space.title, space_path(space) %></h3>
-                    </div>
-                    <div class="col-md-3 right">
-                        <%= link_to "edit", edit_space_path(space), class: "btn btn-primary" %>
-                    </div>
-                </div>
-                <% end %>
-            </div>
-        </div>
-    </div>
+	<div class="col-md-3">
+		<ul class="sidebar-list">
+			<li class="sidebar-item"><%= link_to "Your Spaces", spaces_path, class: "sidebar-link active" %></li>
+			<li class="sidebar-item"><%= link_to "Your Reservations", class: "sidebar-link" %></li>
+			<li class="sidebar-item"><%= link_to "Your ", class: "sidebar-link" %></li>
+		</ul>
+	</div>
+	<div class="col-md-9">
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				Listings
+			</div>
+			<div class="panel-body">
+
+				<% @spaces.each do |space| %>
+					<div class="row">
+						<div class="col-md-2">
+							<%= image_tag space.photos[0].image.url(:thumb) if space.photos.length > 0 %>
+						</div>
+						<div class="col-md-7">
+							<h4><%= space.title %></h4>
+						</div>
+						<div class="col-md-3 right">
+							<%= link_to "Update", edit_space_path(space), class: "btn btn-primary" %>
+						</div>
+					</div>
+					<hr>
+				<% end %>
+
+			</div>
+		</div>
+	</div>
 </div>
