--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,41 @@
 <div class="row">
-    <div class="col-md-3 col-md-offset-1">
-        <%= image_tag @user.avatar, class: "user-profile" %>
-        <div class="user-info">
-            <%= @user.email %>
-        </div>
-    </div>
-    <h2><%= @user.fullname %></h2>
+	<div class="col-md-3">
+		<div class="center">
+			<%= image_tag @user.avatar, class: "user-profile" %>
+
+			<% if current_user != @user %>
+				<div class="row-space-2">
+					<%= link_to "Send Message", conversations_path(sender_id: current_user.id, recipient_id: @user.id), method: 'post', class: "btn btn-primary wide" %>
+				</div>
+			<% end %>
+
+		</div>
+		<div class="panel panel-default">
+			<div class="panel-heading"><%= @user.fullname %></div>
+			<div class="panel-body">
+				<%= @user.email %><br>
+
+			</div>
+		</div>
+	</div>
+</div>
+	<h4>Listings (<%= @spaces.length %>)</h4><br>
+
+	<div class="row">
+
+		<% @spaces.each do |space| %>
+			<div class="col-md-4">
+				<div class="panel panel-default">
+					<div class="panel-heading preview">
+					</div>
+					<div class="panel-body">
+						<%= link_to space.title, space %>
+					</div>
+				</div>
+			</div>
+		<% end %>
+
+	</div>
+
 
 </div>
