--- a/app/views/reservations/your_rentals.html.erb
+++ b/app/views/reservations/your_rentals.html.erb
@@ -1,13 +1,21 @@
 <div class="row">
-  <div class="col-md-10">
-      <h4>Your Rentals</h4><br>
-          </div>
+<div class="col-md-3">
+  <ul class="sidebar-list">
+    <li class="sidebar-item"><%= link_to "Your Spaces", spaces_path, class: "sidebar-link active" %></li>
+    <li class="sidebar-item"><%= link_to "Your Reservations", spaces_path, class: "sidebar-link" %></li>
+    <li class="sidebar-item"><%= link_to "Your Rentals", rentals_path, class: "sidebar-link" %></li>
+  </ul>
+</div>
+
+  <div class="col-md-9">
+    <div class="row">
+            <h4>Your Rentals</h4>
           <div class="panel-body">
               <% @rentals.each do |f| %>
                 <div class="row">
                     <div class="col-md-3">
                       <div class="row">
-                        <b>Rental date:</b>
+                        <b>Rental date(s):</b>
                       </div>
                       <%= f.start_date.strftime('%v') %>
                     </div>
@@ -21,7 +29,7 @@
                       <div class="row">
                         <b>Host:</b>
                       </div>
-                      <%= image_tag image_url(f.space.user), class: "img-circle"%>
+                      <%= image_tag f.space.user.avatar(:thumb)%>
                     </div>
                     <div class="col-md-3">
                       <div class="row">
@@ -31,5 +39,6 @@
                     </div>
                 </div>
               <% end %>
+            </div>
     </div>
 </div>
