--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -3,7 +3,7 @@
 		<ul class="sidebar-list">
 			<li class="sidebar-item"><%= link_to "Your Spaces", spaces_path, class: "sidebar-link active" %></li>
 			<li class="sidebar-item"><%= link_to "Your Reservations", class: "sidebar-link" %></li>
-			<li class="sidebar-item"><%= link_to "Your ", class: "sidebar-link" %></li>
+			<li class="sidebar-item"><%= link_to "Your Rentals", rentals_path, class: "sidebar-link" %></li>
 		</ul>
 	</div>
 	<div class="col-md-9">
