--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 
 	<div class="col-md-3 text-center">
+		<%= image_tag @other.avatar(:thumb), class:"img-circle" %>
 		<strong><%= @other.fullname %></strong>
 		<%= link_to "View Profile", @other, class: "btn btn-default wide" %>
 	</div>
@@ -9,7 +10,7 @@
 
 		<div class="panel panel-default">
 
-				Conversation with <%= @other.fullname %>
+				<h4>Conversation with <%= @other.fullname %></h4>
 
 			<div class="panel-body">
 				<div class="container">
