--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,8 @@
 			</div>
 		</div>
 	</div>
-</div>
+
+<div class="col-md-9">
 	<h4>Listings (<%= @spaces.length %>)</h4><br>
 
 	<div class="row">
@@ -27,6 +28,7 @@
 			<div class="col-md-4">
 				<div class="panel panel-default">
 					<div class="panel-heading preview">
+
 					</div>
 					<div class="panel-body">
 						<%= link_to space.title, space %>
@@ -37,5 +39,5 @@
 
 	</div>
 
-
+</div>
 </div>
