--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,8 +2,6 @@
   <div class="col-md-6 col-md-offset-3 text-center">
     <div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false">
     </div>
-    <%= link_to "Sign In With Facebook", user_facebook_omniauth_authorize_path, class:"btn btn-primary"%></br>
-    <%= link_to "Sign In with Google", user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary" %>
 
 <h2>Sign up</h2>
 
@@ -34,5 +32,8 @@
     <%= f.submit "Sign up", class:"btn btn-primary"%>
   </div>
 <% end %>
+<br>
+<%= link_to "Sign In With Facebook", user_facebook_omniauth_authorize_path, class:"btn btn-primary"%>
+<%= link_to "Sign In with Google", user_google_oauth2_omniauth_authorize_path, class: "btn btn-primary" %>
 </div>
 </div>
