--- a/app/views/spaces/_form.html.erb
+++ b/app/views/spaces/_form.html.erb
@@ -1,19 +1,75 @@
-<div class="row">
-  <div class="col-md-4 col-md-offset-3 text-center">
-    <h1>Create a new space</h1>
-    <%= form_for @space, html: { multipart: true } do |f| %>
-    <label>Types</label>
-    <%= f.select :space_type, [["Shed","Shed"],["Garage","Garage"],["Driveway","Driveway"],["Other","Other"]], prompt: "Select", class: "form-control" %>
-      <%= f.text_field :title, placeholder: "Title", class: "form-control" %><br>
-      <%= f.text_field :description, placeholder: "Description", class: "form-control" %><br>
-      <%= f.text_field :size, placeholder: "Size", class: "form-control" %><br>
-      <%= f.text_field :location, placeholder: "Location", class: "form-control" %><br>
-      <%= f.number_field :price, placeholder: "Price", class: "form-control" %><br>
-      <%= file_field_tag "images[]", type: :file, multipart: true%><br>
+<div class="panel panel-default">
+	<div class="panel-heading">
+		Create a space to rent
+	</div>
+	<div class="panel-body">
+		<div class="container">
 
-      <%= render "photos/list" %>
+			<%= form_for @space, :html => { multipart: true } do |f| %>
 
-      <%= f.submit "Save", class: "btn btn-primary"%>
-    <% end %>
-  </div>
+				<div class="row">
+						<div class="form-group">
+							<label>Space Type</label>
+   						<%= f.select :space_type, [["Shed","Shed"],["Garage","Garage"],["Driveway","Driveway"],["Other","Other"]], prompt: "Select", class: "form-control" %>
+          </div>
+					</div>
+
+					<div class="row">
+						<div class="form-group">
+							<label>Title</label>
+							<%= f.text_field :title, placeholder: "Title", class: "form-control" %>
+						</div>
+					</div>
+
+				<div class="row">
+					<div class="form-group">
+						<label>Description</label>
+						<%= f.text_field :description, placeholder: "Description", class: "form-control" %>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="form-group">
+						<label>Size</label>
+						<%= f.text_field :size, placeholder: "Size", class: "form-control" %>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="form-group">
+						<label>Address</label>
+						<%= f.text_field :location, placeholder: "Location", class: "form-control" %>
+					</div>
+				</div>
+
+				<div class="row">
+						<div class="form-group">
+							<label>Nightly Price</label>
+							<div class="input-group">
+								<div class="input-group-addon">$</div>
+								<%= f.text_field :price, placeholder: "eg. $100", class: "form-control" %>
+							</div>
+						</div>
+				</div>
+
+				<div class="row">
+						<div class="form-group">
+							<span class="btn btn-default btn-file">
+							    <i class="fa fa-cloud-upload fa-lg"></i> Upload Photos
+							    <%= file_field_tag "images[]", type: :file, multiple: true %>
+							</span>
+					</div>
+				</div>
+
+				<div id="photos"><%= render 'photos/list' %></div>
+
+
+				<div class="actions">
+					<%= f.submit "Save", class: "btn btn-primary" %>
+				</div>
+
+			<% end %>
+			</div>
+		</div>
+	</div>
 </div>
