--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -1,1 +1,46 @@
-<h3>your#reservations</h3>
+<div class="row">
+<div class="col-md-3">
+  <ul class="sidebar-list">
+    <li class="sidebar-item"><%= link_to "Your Spaces", spaces_path, class: "sidebar-link" %></li>
+    <li class="sidebar-item"><%= link_to "Your Reservations", your_reservations_path, class: "sidebar-link active" %></li>
+    <li class="sidebar-item"><%= link_to "Your Rentals", rentals_path, class: "sidebar-link" %></li>
+  </ul>
+</div>
+
+  <div class="col-md-9">
+    <div class="row">
+            <h4>Your Reservations</h4>
+          <div class="panel-body">
+            <% @spaces.each do |space| %>
+              <% space.reservations.each do |f| %>
+                <div class="row">
+                    <div class="col-md-3">
+                      <div class="row">
+                        <b>Reservation date(s):</b>
+                      </div>
+                      <%= f.start_date.strftime('%v') %>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="row">
+                        <b>Picture:</b>
+                      </div>
+                      <%= image_tag space.photos[0].image.url(:thumb) %>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="row">
+                        <b>Guest:</b>
+                      </div>
+                      <%= image_tag f.user.avatar(:thumb)%>
+                    </div>
+                    <div class="col-md-3">
+                      <div class="row">
+                        <b>Total:</b>
+                      </div>
+                      <h4>$ <%= f.total %></h4>
+                    </div>
+                </div>
+              <% end %>
+            <% end %>
+            </div>
+    </div>
+</div>
