--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,9 @@
                   <%= image_tag current_user.avatar, class: "img-circle avatar-small" %>
                 <%= current_user.fullname %> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Your Rental Spaces", spaces_path %></li>
+                  <li><%= link_to "Your Spaces", spaces_path %></li>
+                  <li><%= link_to "Your Reservations", your_reservations_path %></li>
+                  <li><%= link_to "Your Rentals", rentals_path %></li>
                   <li><a href="#">Wish Lists</a></li>
                   <li><%= link_to "View Profile", user_path(current_user) %></li>
                   <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
