--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -15,7 +15,6 @@
       <%= f.hidden_field :space_id, value: @space.id %>
       <%= f.hidden_field :price, value: @space.price %>
       <%= f.hidden_field :total, id: 'reservation_total' %>
-      <%= f.submit "Book Space", class: "btn btn-primary" %>
 
       <h4><span id="message"> </span></h4>
 
@@ -52,8 +51,8 @@
             dataType: 'json',
             success: function(data) {
               $.each(data, function(arrID, arrValue){
-                for(var d = new Date(arrValue.start_date); d <= new Date(arrValue.end_date); d.setDate(d.getDate() + 1)) {
-                  unavailableDates.push($.datepicker.formatDate('d-m-yy', d))
+                for(var d = new Date(arrValue.start_date); d <= new Date(arrValue.end_date); d.setDate(d.getDate()+ 1)) {
+                  unavailableDates.push($.datepicker.formatDate('d-m-yy', d));
                 }
               });
 
@@ -68,7 +67,7 @@
 
                   var start_date = 	$(this).datepicker('getDate');
                   var end_date = 	$('#reservation_end_date').datepicker('getDate');
-                  var days = (end_date - start_date)/1000/60/60/24 + 1
+                  var days = (end_date - start_date)/1000/60/60/24 + 1;
 
                   var input = {
                     'start_date': start_date,
@@ -81,11 +80,10 @@
                     data: input,
                     success: function(data){
                       if(data.conflict){
-                        $('#message').text("This data range is not available.");
+                        $('#message').text("This date range is not available.");
                         $('#preview').hide();
                         $('#btn_book').attr('disabled', true);
                       } else {
-                        $('#message').text("This data range is OK.");
                         $('#preview').show();
                         $('#btn_book').attr('disabled', false);
 
@@ -110,7 +108,7 @@
 
                   var start_date = 	$('#reservation_start_date').datepicker('getDate');
                   var end_date = 	$(this).datepicker('getDate');
-                  var days = (end_date - start_date)/1000/60/60/24 + 1
+                  var days = (end_date - start_date)/1000/60/60/24 + 1;
 
                   var input = {
                     'start_date': start_date,
@@ -123,11 +121,9 @@
                     data: input,
                     success: function(data){
                       if(data.conflict){
-                        $('#message').text("This data range is not available.");
                         $('#preview').hide();
                         $('#btn_book').attr('disabled', true);
                       } else {
-                        $('#message').text("This data range is OK.");
                         $('#preview').show();
                         $('#btn_book').attr('disabled', false);
 
