--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,10 +30,14 @@
                         <%= f.password_field :password_confirmation, autocomplete: "off", :placeholder => "Confirm Password", :class => 'form-control' %>
                     </div>
 
+                    <div class="form-group">
+                      <%= f.password_field :current_password, autocomplete: "off", class:"form-control", placeholder:"Current Password" %>
+                    </div>
+
                         <div class="form-group">
                           <span class="btn btn-default btn-file">
                               <i class="fa fa-cloud-upload fa-lg"></i> Profile Image
-                              <%= f.file_field :avatar, type: :file, multiple: true %>
+                              <%= f.file_field :avatar %>
                           </span>
                       </div>
 
