--- a/app/views/reservations/your_rentals.html.erb
+++ b/app/views/reservations/your_rentals.html.erb
@@ -1,9 +1,8 @@
 <div class="row">
 <div class="col-md-3">
   <ul class="sidebar-list">
-    <li class="sidebar-item"><%= link_to "Your Spaces", spaces_path, class: "sidebar-link" %></li>
-    <li class="sidebar-item"><%= link_to "Your Reservations", your_reservations_path, class: "sidebar-link" %></li>
-    <li class="sidebar-item"><%= link_to "Your Rentals", rentals_path, class: "sidebar-link active" %></li>
+    <li class="sidebar-item"><%= link_to "Rentals", rentals_path, class: "sidebar-link" %></li>
+    <li class="sidebar-item"><%= link_to "Rent a space", class: "sidebar-link" %></li>
   </ul>
 </div>
 
@@ -32,6 +31,7 @@
                         <b>Host:</b>
                       </div>
                       <%= link_to user_path(f.space.user) do %>
+                      <%= link_to f.space.user.fullname, user_path(f.space.user) %>
                       <%= image_tag f.space.user.avatar(:thumb)%>
                       <% end %>
                     </div>
