--- a/app/views/reservations/your_reservations.html.erb
+++ b/app/views/reservations/your_reservations.html.erb
@@ -1,22 +1,22 @@
 <div class="row">
 <div class="col-md-3">
   <ul class="sidebar-list">
-    <li class="sidebar-item"><%= link_to "Your Spaces", spaces_path, class: "sidebar-link" %></li>
-    <li class="sidebar-item"><%= link_to "Your Reservations", your_reservations_path, class: "sidebar-link active" %></li>
-    <li class="sidebar-item"><%= link_to "Your Rentals", rentals_path, class: "sidebar-link" %></li>
+    <li class="sidebar-item"><%= link_to "Your Listings", spaces_path, class: "sidebar-link" %></li>
+    <li class="sidebar-item"><%= link_to "Current hostings", your_reservations_path, class: "sidebar-link active" %></li>
+    <li class="sidebar-item"><%= link_to "List a space", new_space_path, class: "sidebar-link active" %></li>
   </ul>
 </div>
 
   <div class="col-md-9">
     <div class="row">
-            <h4>Your Reservations</h4>
+            <h4>Your Hostings</h4>
           <div class="panel-body">
             <% @spaces.each do |space| %>
               <% space.reservations.each do |f| %>
                 <div class="row">
                     <div class="col-md-3">
                       <div class="row">
-                        <b>Reservation date(s):</b>
+                        <b> Date(s):</b>
                       </div>
                       <%= f.start_date.strftime('%v') %>
                     </div>
@@ -33,6 +33,7 @@
                         <b>Guest:</b>
                       </div>
                       <%= link_to user_path(f.user) do %>
+                      <%= link_to f.user.fullname, user_path(f.user) %>
                       <%= image_tag f.user.avatar(:thumb)%>
                       <% end %>
                     </div>
