--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,60 +15,47 @@
                 <li><%= link_to "Log In", new_user_session_path %></li>
                 <li><%= link_to "Sign Up", new_user_registration_path %></li>
             <% else %>
+            <li>
+              <%= link_to conversations_path do %>
+              Messages&nbsp
+              <i class="fa fa-envelope-o"></i>
+              <% end %>
+            </li>
+
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Host <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Your Listings", spaces_path %></li>
+                <li><%= link_to "Current Hostings", your_reservations_path %></li>
+                <li><%= link_to "List A Space", new_space_path %></li>
+              </ul>
+            </li>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Rent <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Rent A Space" %></li>
+                <li><%= link_to "Rentals", rentals_path %></li>
+              </ul>
+            </li>
+
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                   <%= image_tag current_user.avatar, class: "img-circle avatar-small" %>
                 <%= current_user.fullname %> <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Your Spaces", spaces_path %></li>
-                  <li><%= link_to "Your Reservations", your_reservations_path %></li>
-                  <li><%= link_to "Your Rentals", rentals_path %></li>
-                  <li><a href="#">Wish Lists</a></li>
                   <li><%= link_to "View Profile", user_path(current_user) %></li>
                   <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
                   <li role="separator" class="divider"></li>
-                  <li><a href="#">Account Setting</a></li>
                   <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
                 </ul>
               </li>
 
-            <li>
-                <%= link_to conversations_path do %>
-                Messages&nbsp
-                <i class="fa fa-envelope-o"></i>
                 <% end %>
-            </li>
-            <li>
-                <%= link_to new_space_path do %>
-                Rent A Space&nbsp
-                <i class="fa fa-plus-square"></i>
-                <% end %>
-            </li>
-
-
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        <%= current_user.fullname %>
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><%= link_to "Your Rental Spaces", spaces_path %></li>
-                        <li>
-                            <a href="#">Wish Lists</a>
-                        </li>
-                        <li><%= link_to "View Profile", user_path(current_user) %></li>
-                        <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a href="#">Account Setting</a>
-                        </li>
-                        <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-                    </ul>
-                </li>
-                <% end %>
-
             </ul>
         </div>
-        <!--/.nav-collapse -->
     </div>
 </nav>
