--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,10 +1,10 @@
 <div class="row">
 	<div class="col-md-3">
 		<ul class="sidebar-list">
-			<li class="sidebar-item"><%= link_to "Your Spaces", spaces_path, class: "sidebar-link active" %></li>
-	    <li class="sidebar-item"><%= link_to "Your Reservations", your_reservations_path, class: "sidebar-link" %></li>
-	    <li class="sidebar-item"><%= link_to "Your Rentals", rentals_path, class: "sidebar-link" %></li>
-		</ul>
+	    <li class="sidebar-item"><%= link_to "Your Listings", spaces_path, class: "sidebar-link" %></li>
+	    <li class="sidebar-item"><%= link_to "Current hostings", your_reservations_path, class: "sidebar-link active" %></li>
+	    <li class="sidebar-item"><%= link_to "List a space", new_space_path, class: "sidebar-link active" %></li>
+	  </ul>
 	</div>
 	<div class="col-md-9">
 		<div class="panel panel-default">
