added splash page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -92,6 +92,11 @@ body {
   height: 400px !important;
 }
 
+.index_cards {
+  width: 250px;
+  height: 200px;
+}
+
 .carousel-inner > .item > img {
     margin: 0 auto;
 }
