--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -34,31 +34,12 @@
 <hr>
 
 <div class="row">
-  <div class="col-sm-4">
-    <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
+  <% @spaces.each do |space| %>
+  <div class="col-md-4">
+    <%= image_tag space.photos[0].image.url(:medium) if space.photos.length > 0 %><br>
+    <%= link_to space.title, space %><br><br>
+
   </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-  </div>
-  </div>
-  <div class="col-sm-4">
-    <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-block">
-      <h4 class="card-title">Card title</h4>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    </div>
-  </div>
-  </div>
+  <% end %>
+
 </div>
