made it so you can update profile without image

--- a/app/views/spaces/_form.html.erb
+++ b/app/views/spaces/_form.html.erb
@@ -47,7 +47,7 @@
 							<label>Nightly Price</label>
 							<div class="input-group">
 								<div class="input-group-addon">$</div>
-								<%= f.text_field :price, placeholder: "eg. $100", class: "form-control" %>
+								<%= f.text_field :price, placeholder: "100", class: "form-control" %>
 							</div>
 						</div>
 				</div>
