prepping to push to heroku

--- a/app/views/spaces/show.html.erb
+++ b/app/views/spaces/show.html.erb
@@ -45,6 +45,8 @@
                         <%= @space.location %></br></br>
                             About:
                                 <p><%= @space.description %></p>
+
+                             Daily price: <p><%= @space.price %></p>
                     </div>
                 </div>
             </div>
