added footer and about page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -100,3 +100,12 @@ body {
 .carousel-inner > .item > img {
     margin: 0 auto;
 }
+
+footer {
+  height: 50px;
+  width: 100%;
+  background-color: white;
+  text-align: center;
+  padding-top: 12px;
+  margin-top: 50px;
+}
