--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -35,7 +35,7 @@
 </div>
 
 	</div>
-
+<!--this is super picky but can you keep the spacing and indents consistent in your view code? -->
 </div>
 
 <%= subscribe_to conversation_messages_path(@conversation) %>
