--- a/app/views/photos/destroy.js.erb
+++ b/app/views/photos/destroy.js.erb
@@ -1,1 +1,3 @@
+//I understand what you are doing here, but it is a little bit of a weird pattern to have it here.
+//Maybe move to js directory?
 $('#photos').html("<%= j render 'photos/list'%>")
