--- a/app/views/spaces/create.html.erb
+++ b/app/views/spaces/create.html.erb
@@ -1,2 +1,3 @@
+<!-- Removed unused/debugging-only tags like this when  in prod-->
 <h1>Spaces#create</h1>
 <p>Find me in app/views/spaces/create.html.erb</p>
