--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,8 @@ body {
   width: 400px;
 }
 
+//This should ideally be altered so that any dimension of profile picture
+//will be cropped and a non-stretched circle shape
 .user-profile {
   width: 200px;
   height: 200px;
