--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
-
+<!--Messaging and conversation functionality is awesome here. Very cool,
+hope you all have a good understanding of in-app messages now -->
 	<div class="col-md-3 text-center">
 		<%= image_tag @other.avatar(:thumb), class:"img-circle" %>
 		<strong><%= @other.fullname %></strong>
