--- a/app/views/spaces/index.html.erb
+++ b/app/views/spaces/index.html.erb
@@ -1,3 +1,4 @@
+<!--I notice if I log out, I am still allowed to be on the main index page - I don't think this is intentional.  -->
 <div class="row">
 	<div class="col-md-3">
 		<ul class="sidebar-list">
