--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
 <div class="col-md-6 col-md-offset-3 text-center">
+  <!--The password reset appears to be broken in production. I'm testing this on an airplane, so could be wifi.
+But I'm fairly certain it is broken. just tested with  jean.weatherwax@gmail.com.-->
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
